# datadog-cloudformation-resources

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE-3rdparty.csv  NOTICE  README.md  RELEASING.md  pom.xml  publish  publish-requirements.txt
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  labeler.yml
datadog-cloudformation-common/: CHANGELOG.md  pom.xml
datadog-cloudformation-common-python/: CHANGELOG.md  README.md  setup.cfg  setup.py
datadog-cloudformation-common-python/src/datadog_cloudformation_common/: api_clients.py  utils.py  version.py
datadog-cloudformation-common-python/tests/: conftest.py  test_api_clients.py  test_api_clients_behavioral.py
datadog-cloudformation-utils/: README.md  pom.xml
datadog-dashboards-dashboard-handler/: .rpdk-config  CHANGELOG.md  README.md  datadog-dashboards-dashboard-configuration.json  datadog-dashboards-dashboard.json  requirements.txt  resource-role.yaml  template.yml
datadog-iam-user-handler/: .rpdk-config  CHANGELOG.md  README.md  datadog-iam-user.json  pom.xml  requirements.txt  resource-role.yaml  template.yml
datadog-integration-aws-handler/: .rpdk-config  README.md  datadog-integration-aws.json  pom.xml  template.yml
datadog-integrations-aws-handler/: .gitignore  .rpdk-config  CHANGELOG.md  README.md  datadog-integrations-aws-configuration.json  datadog-integrations-aws.json  pom.xml  requirements.txt  resource-role.yaml  template.yml
datadog-integrations-awsaccount-handler/: .rpdk-config  CHANGELOG.md  README.md  datadog-integrations-awsaccount-configuration.json  datadog-integrations-awsaccount.json  requirements.txt  resource-role.yaml  template.yml
datadog-monitors-downtime-handler/: .rpdk-config  CHANGELOG.md  README.md  datadog-monitors-downtime-configuration.json  datadog-monitors-downtime.json  pom.xml  (+3 more)
(+203 files in other folders)
