# Unless explicitly stated otherwise all files in this repository are licensed
# under the Apache 2.0 style license (see LICENSE).
# This product includes software developed at Datadog (https://www.datadoghq.com/).
# Copyright 2020-Present Datadog, Inc.

[metadata]
name = datadog-cloudformation-common
description = Common utilities for use in Datadog Cloudformation resources development
long_description = file: README.md
long_description_content_type = text/markdown
author = Datadog, Inc.
author_email = packages@datadoghq.com
url = https://github.com/DataDog/datadog-cloudformation-resources/datadog-cloudformation-common-python
license = Apache 2.0
platforms = any
classifiers=
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
project_urls =
    Bug Tracker = https://github.com/DataDog/datadog-cloudformation-resources/issues
    Source Code = https://github.com/DataDog/datadog-cloudformation-resources/datadog-cloudformation-common-python

[options]
packages = find:
package_dir=
    =src
include_package_data = True
python_requires = >=3.7
install_requires =
    datadog-api-client==1.11.0
    cloudformation-cli-python-lib==2.1.7
setup_requires =
    setuptools>=30.3.0

[options.packages.find]
exclude = tests
where=src

[options.extras_require]
build =
    cloudformation-cli-python-plugin==2.1.5
    cloudformation-cli==0.2.25

[flake8]
max-line-length = 120
extend-ignore = E203

[tool:black]
line-length = 120

[tool:isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 120
